test/error/s_badmetatype.lua
hstructure S
	meta : number; -- must be 'table', 'object' or a struct name
	o : object;
end
